RESOLVED FIXED100188
[mac] Kerning and ligatures are not enabled by default
https://bugs.webkit.org/show_bug.cgi?id=100188
Summary [mac] Kerning and ligatures are not enabled by default
mitz
Reported 2012-10-23 20:59:11 PDT
Attachments
Enable kerning and ligatures by default (10.05 KB, patch)
2012-10-23 21:13 PDT, mitz
sam: review+
mitz
Comment 1 2012-10-23 21:13:59 PDT
Created attachment 170309 [details] Enable kerning and ligatures by default
mitz
Comment 2 2012-10-23 22:13:49 PDT
mitz
Comment 3 2022-12-26 19:53:05 PST
*** Bug 6135 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.