Source/WebKit/mac: WebKit/mac part of <rdar://problem/2966974> [mac] Kerning and ligatures are not enabled by default https://bugs.webkit.org/show_bug.cgi?id=100188

Reviewed by Sam Weinig.

* WebView/WebView.mm:
(+[WebView initialize]): Added a local variable to hold the standard user defaults. Added
code to register a value of YES for the WebKitKerningAndLigaturesEnabledByDefault user
default. Changed to refer to that default key by name.

Source/WebKit2: WebKit2 part of <rdar://problem/2966974> [mac] Kerning and ligatures are not enabled by default
https://bugs.webkit.org/show_bug.cgi?id=100188

Reviewed by Sam Weinig.

* UIProcess/mac/WebContextMac.mm:
(WebKit::registerUserDefaultsIfNeeded): Added. Registers a value of YES for the
WebKitKerningAndLigaturesEnabledByDefault user default if it has not been registered yet.
(WebKit::WebContext::platformInitializeWebProcess): Added a call to
registerUserDefaultsIfNeeded, and changed to refer to the defaults key by name.

Tools: Tools changes for <rdar://problem/2966974> [mac] Kerning and ligatures are not enabled by default
https://bugs.webkit.org/show_bug.cgi?id=100188

Reviewed by Sam Weinig.

Disable kerning and ligatures by default when running the tests.

* DumpRenderTree/mac/DumpRenderTree.mm:
(resetDefaultsToConsistentValues): Set a value of NO for the
WebKitKerningAndLigaturesEnabledByDefault user default.
* WebKitTestRunner/mac/main.mm:
(main): Register a value of NO for the WebKitKerningAndLigaturesEnabledByDefault user
default.



Canonical link: https://commits.webkit.org/118224@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132309 268f45cc-cd09-0410-ab3c-d52691b4dbfc